--- a/docs/main.css
+++ b/docs/main.css
@@ -30,6 +30,7 @@ body {
    }
    nav{
      position: fixed;
+     align-content: space-around;
    }
    .navbar {
      width: 100%;
@@ -47,7 +48,7 @@ body {
      border: 0px;
    }
    .mainheader {
-       text-align: left; 
+       text-align: center; 
        padding-left: 10px;
      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;  
      margin: 0px;
